# present

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  STYLE.md  index.md  test-with-coverage.sh
coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/: catch.hpp.func-sort-c.html  catch.hpp.func.html  catch.hpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/present/: clock-time.h.func-sort-c.html  clock-time.h.func.html  clock-time.h.gcov.html  date.h.func-sort-c.html  date.h.func.html  date.h.gcov.html  day-delta.h.func-sort-c.html  day-delta.h.func.html  day-delta.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  month-delta.h.func-sort-c.html  month-delta.h.func.html  month-delta.h.gcov.html  time-delta.h.func-sort-c.html  time-delta.h.func.html  time-delta.h.gcov.html  timestamp.h.func-sort-c.html  timestamp.h.func.html  timestamp.h.gcov.html
coverage/present/include/: catch.hpp.func-sort-c.html  catch.hpp.func.html  catch.hpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/present/src/: clock-time.c.func-sort-c.html  clock-time.c.func.html  clock-time.c.gcov.html  clock-time.cpp.func-sort-c.html  clock-time.cpp.func.html  clock-time.cpp.gcov.html  date.c.func-sort-c.html  date.c.func.html  date.c.gcov.html  date.cpp.func-sort-c.html  date.cpp.func.html  date.cpp.gcov.html  index.html  (+30 more)
coverage/src/: clock-time.c.func-sort-c.html  clock-time.c.func.html  clock-time.c.gcov.html  clock-time.cpp.func-sort-c.html  clock-time.cpp.func.html  clock-time.cpp.gcov.html  date.c.func-sort-c.html  date.c.func.html  date.c.gcov.html  date.cpp.func-sort-c.html  date.cpp.func.html  date.cpp.gcov.html  day-delta.c.func-sort-c.html  day-delta.c.func.html  day-delta.c.gcov.html  day-delta.cpp.func-sort-c.html  day-delta.cpp.func.html  day-delta.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  month-delta.c.func-sort-c.html  month-delta.c.func.html  month-delta.c.gcov.html  month-delta.cpp.func-sort-c.html  month-delta.cpp.func.html  month-delta.cpp.gcov.html  present-syscalls.c.func-sort-c.html  present-syscalls.c.func.html  present-syscalls.c.gcov.html  time-delta.c.func-sort-c.html  time-delta.c.func.html  time-delta.c.gcov.html  time-delta.cpp.func-sort-c.html  time-delta.cpp.func.html  time-delta.cpp.gcov.html  timestamp.c.func-sort-c.html  timestamp.c.func.html  timestamp.c.gcov.html  (+3 more)
coverage/test/: catch.hpp.func-sort-c.html  catch.hpp.func.html  catch.hpp.gcov.html  clock-time-test.cpp.func-sort-c.html  clock-time-test.cpp.func.html  clock-time-test.cpp.gcov.html  date-test.cpp.func-sort-c.html  date-test.cpp.func.html  date-test.cpp.gcov.html  day-delta-test.cpp.func-sort-c.html  day-delta-test.cpp.func.html  day-delta-test.cpp.gcov.html  delta-macros-test.cpp.func-sort-c.html  delta-macros-test.cpp.func.html  delta-macros-test.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  month-delta-test.cpp.func-sort-c.html  month-delta-test.cpp.func.html  month-delta-test.cpp.gcov.html  test-utils.cpp.func-sort-c.html  test-utils.cpp.func.html  test-utils.cpp.gcov.html  timestamp-test.cpp.func-sort-c.html  timestamp-test.cpp.func.html  timestamp-test.cpp.gcov.html
doc/: doc-index.html
doc/html/: annotated.html  annotated.js  check_for_error.html  check_for_error_clocktime.html  check_for_error_date.html  check_for_error_timestamp.html  classes.html  clock-time_8h.html  clock-time_8h.js  clock-time_8h_source.html  date_8h.html  date_8h.js  date_8h_source.html  day-delta_8h.html  day-delta_8h.js  day-delta_8h_source.html  dir_4162f59286e284fe1d32fdb5ef0faf8e.html  dir_4162f59286e284fe1d32fdb5ef0faf8e.js  dir_544f098abf3ba4cedf0e88e6410422bb.html  dir_544f098abf3ba4cedf0e88e6410422bb.js  doc-check-error_8dox.html  doxygen.css  errors_epilogue.html  files.html  files.js  functions.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x73.html  functions_0x74.html  functions_0x77.html  functions_0x79.html  (+88 more)
doc/latex/: annotated.tex  check_for_error.tex  check_for_error_clocktime.tex  check_for_error_date.tex  check_for_error_timestamp.tex  clock-time_8h.tex  date_8h.tex  day-delta_8h.tex  dir_4162f59286e284fe1d32fdb5ef0faf8e.tex  dir_544f098abf3ba4cedf0e88e6410422bb.tex  doc-check-error_8dox.tex  doxygen.sty  errors_epilogue.tex  files.tex  has_error_epilogue.tex  month-delta_8h.tex  present_8h.tex  refman.tex  structClockTime.tex  structDate.tex  structDayDelta.tex  structMonthDelta.tex  structPresentWeekYear.tex  structTimeDelta.tex  structTimestamp.tex  time-delta_8h.tex  timestamp_8h.tex  types_8h.tex
include/: clock-time.h  date.h  month-delta.h  present-syscalls.h  present-utils.h  present.h  time-delta.h  timestamp.h
include/present/: clock-time.h  date.h  day-delta.h  month-delta.h  time-delta.h  timestamp.h
include/present-impl/: clock-time-data.h  date-data.h  month-delta-data.h  time-delta-data.h  timestamp-data.h
include/present-utils/: constants.h  types.h  utils.h
scripts/: mkbuild.sh  mktest.sh  test.sh  travis-build.sh  travis-deploy.sh  travis-prep.sh  travis-util.sh
src/: clock-time.c  clock-time.cpp  clock-time.h  date.c  date.cpp  date.h  day-delta.c  day-delta.cpp  impl-constants.h  impl-utils.h  month-delta.c  month-delta.cpp  present-config.h.in  present-syscalls.c  present-syscalls.h  present-utils.h  repl.cpp  time-delta.c  time-delta.cpp  timestamp.c  timestamp.cpp  types.h  util.h
src/impl/: clock-time-data.h  date-data.h
src/utils/: constants.h  impl-utils.h  time-calls.c  time-calls.h  time-utils.c  time-utils.h
test/: clock-time-test.cpp  date-test.cpp  day-delta-test.cpp  delta-macros-test.cpp  month-delta-test.cpp  test-utils.cpp  test-utils.hpp  test.cpp  time-delta-test.cpp  timestamp-test.cpp
(+170 files in other folders)
